# xface-new

./: CMakeCache.txt  CMakeLists.txt  Makefile  changes.txt  cmake_install.cmake  todo.txt
Faces/alice/: alice.fdp  alice.fg
Faps/: actionOnlySeq.smil  anger.fap  beg.fap  disgust.fap  externalWav.smil  fear.fap  happy-for.fap  hate.fap  italian.smil  joy.fap  pride.fap  withMarks.smil  withSilent.smil
QFace/: CMakeLists.txt  QFace.cpp  QFace.h  QFace_automoc.cpp  QtFace.cpp  QtFace.h  QtView.cpp  QtView.h  moc_QtView.cpp
XFace/: CMakeCache.txt  CMakeLists.txt  Makefile  XFace-71.vcproj  XFace-80.vcproj  XFace-90.vcproj  cmake_install.cmake  mpl-c
XFace/docs/: Doxyfile  XFace.chm  xheader.html
XFace/include/XEngine/: AuxXFace.h  BinaryModelBatchLoader.h  BmpFile.h  Buffer.h  DeformableGeometry.h  Drawable.h  Entity.h  GLPrerrequisites.h  Geometry.h  IModelLoader.h  IRenderer.h  ITexture.h  ITextureFile.h  ITextureLoader.h  ITimedController.h  ITimer.h  IndexedFaceSet.h  KeyframeInterpolator.h  MeshManager.h  ModelFileFactory.h  MorphBlender.h  MorphChannel.h  MorphController.h  MorphTarget.h  NamedObj.h  OBJLoader.h  RenderList.h  RenderManager.h  RendererGL.h  Texture2D.h  TextureLoaderGL.h  TextureManager.h  TgaFile.h  Transform.h  VRML1Loader.h  VRML97Loader.h  VertexStruct.h  bitmap.h
XFace/include/XFace/: AnimProcessor.h  ExpressionChannel.h  EyeChannel.h  FDP.h  FDPFile.h  FDPItem.h  FDPLoader.h  FDPWriter.h  FaceBase.h  FaceEntity.h  FapFile.h  HeadChannel.h  IFapStream.h  IInfluenceCalculator.h  InfluenceCalculatorMaker.h  PHOLoader.h  PhonemeDictionary.h  RaisedCosInfluence.h  XercesString.h
XFace/include/XFaceApp/: ApplicationBase.h  ISound.h  ModelCamera.h  Notification.h  Task.h  TaskHandlerBase.h  XMLUtils.h
XFace/include/XMath/: AxisAngle.h  Matrix4.h  Perlin.h  Quaternion.h  Ray3.h  Rectangle.h  Vector3.h  XLineSegment.h  XMath.h  XTriangle.h
XFace/src/XEngine/: AuxXFace.cpp  BinaryModelBatchLoader.cpp  BmpFile.cpp  DeformableGeometry.cpp  Drawable.cpp  Entity.cpp  GLPrerrequisites.cpp  Geometry.cpp  IndexedFaceSet.cpp  KeyframeInterpolator.cpp  MeshManager.cpp  ModelFileFactory.cpp  MorphBlender.cpp  MorphChannel.cpp  MorphController.cpp  OBJLoader.cpp  RenderList.cpp  RenderManager.cpp  RendererGL.cpp  TextureLoaderGL.cpp  TextureManager.cpp  TgaFile.cpp  Transform.cpp  VRML1Loader.cpp  VRML97Loader.cpp
XFace/src/XFace/: AnimProcessor.cpp  ExpressionChannel.cpp  EyeChannel.cpp  FDP.cpp  FDPFile.cpp  FDPItem.cpp  FDPLoader.cpp  FDPWriter.cpp  FaceBase.cpp  FaceEntity.cpp  FapFile.cpp  HeadChannel.cpp  InfluenceCalculatorMaker.cpp  PHOLoader.cpp  PhonemeDictionary.cpp  RaisedCosInfluence.cpp  XercesString.cpp
XFace/src/XFaceApp/: ApplicationBase.cpp  ModelCamera.cpp  Notification.cpp  Task.cpp  TaskHandlerBase.cpp  XMLUtils.cpp
XFace/src/XMath/: Matrix4.cpp  Perlin.cpp  Quaternion.cpp  XMath.cpp  raytri.cpp
XSmilAgent/: CMakeLists.txt  Doxyfile  IScriptProcessor.h  ITTSEngine.h  ItalianFlite.cpp  ItalianFlite.h  Makefile  SGNode.cpp  SGNode.h  SMILManager.cpp  SMILManager.h  SMILObjects.cpp  SMILObjects.h  SMILProcessor.cpp  SMILProcessor.h  ScriptProcessorLoader.cpp  ScriptProcessorLoader.h  TTSEngineMaker.cpp  TTSEngineMaker.h  VisitorAnimCreator.cpp  VisitorAnimCreator.h  VisitorInfoPrinter.cpp  VisitorInfoPrinter.h  VisitorSAPISpeech.cpp  VisitorSAPISpeech.h  VisitorSpeech.cpp  VisitorSpeech.h  VisitorTiming.cpp  VisitorTiming.h  Wave.cpp  Wave.h  Wave2.cpp  Wave2.h  XSAPI.cpp  XSAPI.h  XSmilAgent-71.vcproj  XSmilAgent-80.vcproj  XSmilAgent-90.vcproj  XSmilAgent.chm  XercesString.cpp  (+5 more)
cmake/modules/: FindXercesC.cmake
setup/: License.txt  XFace.nsi  XfaceCode.nsi
wxFaceClient/: CMakeLists.txt  ConnectionDlg.cpp  ConnectionDlg.h  ControlPanel.cpp  ControlPanel.h  DropScriptTarget.cpp  DropScriptTarget.h  FaceApp.cpp  FaceApp.h  FaceFrame.cpp  FaceFrame.h  Makefile  TaskSender.cpp  TaskSender.h  XFaceClient.nsi  cmake_install.cmake  resource.rc  test.smil  toggle.cpp  wxFaceClient-71.vcproj  wxFaceClient-80.vcproj  wxFaceClient-90.vcproj  wxfaceclient
wxFaceClient/lang/: enSAPI.dic  italian.dic  sapiEn.txt
wxFaceClientSimple/: FaceClientSimpleDlg.cpp  FaceClientSimpleDlg.h  resource.h  resource.rc  resrc1.h  sample.smil  wxFaceClientSimple-71.vcproj  wxFaceClientSimple-80.vcproj  wxFaceClientSimple-90.vcproj  wxFaceClientSimple.cpp  wxFaceClientSimple.exe.manifest  wxFaceClientSimple.h
wxFaceEd/: CMakeLists.txt  ConfPanel.cpp  ConfPanel.h  DictionaryFilesDlg.cpp  DictionaryFilesDlg.h  DictionaryOptionsDlg.fbp  DropFDPFileTarget.cpp  DropFDPFileTarget.h  FAPUPanel.cpp  FAPUPanel.h  FDPPanel.cpp  FDPPanel.h  FDPPicture.cpp  FDPPicture.h  FaceApp.cpp  FaceApp.h  FaceFrame.cpp  FaceFrame.h  FaceView.cpp  FaceView.h  KeyframeAddDlg.cpp  KeyframeAddDlg.h  Makefile  Mediator.cpp  Mediator.h  ModelViewerCamera.cpp  ModelViewerCamera.h  ModifyDictionaryFileDlg.cpp  ModifyDictionaryFileDlg.h  Panel.cpp  Panel.h  PhonDictOptions.cpp  PhonDictOptions.h  PreviewKeyframeAddDlg.cpp  PreviewKeyframeAddDlg.h  PreviewPanel.cpp  PreviewPanel.h  Resource.h  RubberBandBox.cpp  RubberBandBox.h  (+22 more)
wxFaceEd/help/: contents.hhc  faceview.htm  fapu_p.htm  fdp_p.htm  keyframe_p.htm  main.htm  mesh_p.htm  panels.htm  preview_p.htm  started.htm  xfaceed.hhp
wxFaceEd/res/: cursor_crosshair_target.xpm  cursor_move_outlined.xpm
wxFacePlayer/: AVIGenerator.cpp  AVIGenerator.h  CMakeCache.txt  CMakeLists.txt  ConnPortSetting.cpp  ConnPortSetting.h  DicTraverser.cpp  DicTraverser.h  DropFAPFileTarget.cpp  DropFAPFileTarget.h  FaceView.cpp  FaceView.h  Makefile  NotificationSenderThread.cpp  NotificationSenderThread.h  SDLSound.cpp  SDLSound.h  SDLTimer.cpp  SDLTimer.h  ServerThread.cpp  ServerThread.h  XFacePlayer.nsi  cmake_install.cmake  resource.h  resource.rc  resrc1.h  sample.smil  scriptProcs.xml  toggle.h  wxFace.cpp  wxFace.h  wxFacePlayer-71.vcproj  wxFacePlayer-80.vcproj  wxFacePlayer-90.vcproj  wxFacePlayerApp.cpp  wxFacePlayerApp.h  wxFacePlayerFrm.cpp  wxFacePlayerFrm.h  wxFaceTimer.cpp  wxFaceTimer.h  (+2 more)
wxFacePlayer/lang/: italian.dic
